<?xml version="1.0"?>
<package format="2">
  <name>mowgli</name>
  <version>0.0.0</version>
  <description>The mowgli messages package</description>


  <maintainer email="clemens1@familie-elflein.de">Clemens Elflein</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <url type="website">https://github.com/ClemensElflein/OpenMower</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>